--- a/todo_app/pubspec.yaml
+++ b/todo_app/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  dotted_border: ^3.1.0
+  animated_analog_clock: ^0.2.2
+
  
   cupertino_icons: ^1.0.8
 
